trunk/Archive/ab32365bb073deab7a8b661f687edf52-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:7:1: error: expected ';' after struct definition
 }
 ^
